# AVSDK2

./: .gitignore
touchtech_engine/: CMakeLists.txt  version.h
touchtech_engine/baseWrapper/jni/: Android.mk
touchtech_engine/baseWrapper/src/: SyncTCPTalk.h  TLSMemory.cpp  XTimerCWrapper.cpp  XTimerCWrapper.h  mem_pool.h
touchtech_engine/ffmpegPlayer/FFmpeg-release-3.3/: ffmpeg_dxva2.c  ffmpeg_filter.c  ffmpeg_vaapi.c  ffmpeg_videotoolbox.c  ffserver_config.c
touchtech_engine/ffmpegPlayer/FFmpeg-release-3.3/compat/: getopt.c
touchtech_engine/ffmpegPlayer/FFmpeg-release-3.3/libavcodec/: 8svx.c  a64multienc.c  aac_adtstoasc_bsf.c  aaccoder.c  aacdec_fixed.c  aacenc.h  aacenc_is.h  aacenc_ltp.c  aacenctab.c  aacsbr_fixed_tablegen.h  aacsbr_template.c  aactab.c  ac3dec.c  ac3dec_float.c  ac3enc_fixed.c  ac3enc_template.c  adpcm.c  adpcm.h  adx.c  adx.h  alac_data.h  alacdsp.h  amrnbdec.c  ass_split.c  ass_split.h  assdec.c  asv.c  atrac1.c  atrac3.c  audio_frame_queue.c  audioconvert.h  audiotoolboxenc.c  aura.c  avpacket.c  avuienc.c  bethsoftvideo.c  bgmc.c  binkaudio.c  bitstream_filter.c  blockdsp.c  (+239 more)
touchtech_engine/ffmpegPlayer/FFmpeg-release-3.3/libavdevice/: alsa.h  alsa_enc.c  avdevice.c  decklink_dec.h  dshow.c  dshow_crossbar.c  dshow_enumpins.c  dshow_filter.c  dshow_pin.c  fbdev_enc.c  iec61883.c  lavfi.c  libcdio.c  opengl_enc.c  oss_dec.c  oss_enc.c  sndio.h  sndio_enc.c  v4l.c
touchtech_engine/ffmpegPlayer/FFmpeg-release-3.3/libavfilter/: af_acrusher.c  af_aemphasis.c  af_afade.c  af_anequalizer.c  af_apad.c  af_aphaser.c  af_ashowinfo.c  af_astats.c  af_compand.c  af_crystalizer.c  af_extrastereo.c  af_firequalizer.c  af_flanger.c  af_pan.c  af_silencedetect.c  af_sofalizer.c  af_stereowiden.c  af_vibrato.c  allfilters.c  asink_anullsink.c  asrc_flite.c  audio.h  avfilter.c  bbox.c  buffersink.h  colorspacedsp_yuv2yuv_template.c  deshake.h  drawutils.h  dualinput.c  dualinput.h  f_metadata.c  fifo.c  framequeue.h  generate_wave_table.h  hermite.h  scale.h  signature.h  stereo3d.h  vf_blackdetect.c  vf_boxblur.c  (+40 more)
touchtech_engine/ffmpegPlayer/FFmpeg-release-3.3/libavformat/: ac3dec.c  aea.c  aiffenc.c  aixdec.c  anm.c  ape.c  apngdec.c  asfcrypt.c  asfdec_f.c  assenc.c  astenc.c  audiointerleave.c  avisynth.c  avs.c  bintext.c  bluray.c  boadec.c  cafdec.c  cdxl.c  crcenc.c  data_uri.c  dcstr.c  dsfdec.c  dsicin.c  dv.c  dxa.c  ffm.h  ffmdec.c  ffmenc.c  ffmetaenc.c  file.c  flacdec.c  flacenc.c  flic.c  flvdec.c  flvenc.c  fsb.c  g722.c  hashenc.c  hevcdec.c  (+87 more)
touchtech_engine/ffmpegPlayer/FFmpeg-release-3.3/libavresample/: audio_data.h  audio_mix_matrix.c  avresample.h  dither.h  resample.h
touchtech_engine/ffmpegPlayer/FFmpeg-release-3.3/libavutil/: aes.c  atomic_win32.h  base64.c  buffer.c  buffer_internal.h  color_utils.c  colorspace.h  dict.c  dynarray.h  fixed_dsp.h  hwcontext.c  imgutils.c  intmath.h  mastering_display_metadata.c  opencl_internal.h  sha.c  softfloat.h  softfloat_ieee754.h  threadmessage.h  time.c
touchtech_engine/ffmpegPlayer/FFmpeg-release-3.3/libpostproc/: postprocess.c  version.h
touchtech_engine/ffmpegPlayer/FFmpeg-release-3.3/libswresample/: options.c  resample.h  resample_template.c  soxr_resample.c  swresample.c
touchtech_engine/ffmpegPlayer/FFmpeg-release-3.3/tests/: audiogen.c  base64.c  rotozoom.c  tiny_ssim.c
touchtech_engine/ffmpegPlayer/FFmpeg-release-3.3/tools/: ffescape.c  ismindex.c  probetest.c  seek_print.c
touchtech_engine/ffmpegPlayer/ffmpeg-external-libs/: env_setup_ndk.sh  pkg-config-apple-ios-i386  pkg-config-common
touchtech_engine/ffmpegPlayer/player/: IFFMpegDecoder.h
touchtech_engine/interface/: IMyYouMeInterface.h  IYouMeCInterface.h  IYouMeVideoMixer.h  YouMeConstDefine.h  YouMeEngineManagerForQiniu.hpp  YouMeVoiceEngine.h
touchtech_engine/interface/android/: CameraManager.h
touchtech_engine/interface/classes/: NgnEngine.cpp
touchtech_engine/interface/classes/monitor/: AVRuntimeMonitor.cpp  AVRuntimeMonitor.h  MonitoringCenter.cpp  ReportService.h
touchtech_engine/interface/classes/service/: VideoRenderManager.hpp  YMVideoRecorderManager.hpp
touchtech_engine/interface/classes/utils/: MMNotificationClient.cpp  NgnConfigurationEntry.cpp  NgnConfigurationEntry.h  SDKValidateTalk.h
touchtech_engine/interface/common/: ICameraManager.cpp  ICameraManager.hpp  ImageUtils.hpp  MediaSessionMgr.cxx  MediaSessionMgr.h  SafeObject.h
touchtech_engine/interface/imp/: IYouMeCInterface.cpp  IYouMeVoiceEngine.cpp  YouMeVideoMixerAdapter.cpp  YouMeVoiceEngine.cpp
touchtech_engine/protobuf/: ProtocolBufferHelp.cpp  ProtocolBufferHelp.h  YouMeServerValidProtocol.pb.cc  YouMeServerValidProtocol.pb.h  YouMeServerValidProtocol.proto  common.pb.cc  serverlogin.pb.cc  serverlogin.pb.h  uploadlog.pb.h
touchtech_engine/tinyDAV/include/tinydav/: tdav.h  tdav_apple.h
touchtech_engine/tinyDAV/jni/: Android.mk
touchtech_engine/tinyDAV/src/audio/: tdav_session_audio.cpp  youme_jitter.cpp
touchtech_engine/tinyDAV/src/common/: tdav_audio_rscode.c
touchtech_engine/tinyDAV/src/t140/: tdav_consumer_t140.c
touchtech_engine/tinyMEDIA/include/tinymedia/: tmedia.h  tmedia_codec.h  tmedia_converter_video.h  tmedia_params.h
touchtech_engine/tinyMEDIA/jni/: Android.mk  Application.mk
touchtech_engine/tinyMEDIA/src/: tmedia_converter_video.c  tmedia_defaults.c  tmedia_rscode.c  tmedia_session.c  tmedia_utils.c
touchtech_engine/tinyNET/jni/: Android.mk
touchtech_engine/tinyNET/src/: tnet.c  tnet_hardwares.h  tnet_proto.h  tnet_transport_win32.c
touchtech_engine/tinyRTP/include/tinyrtp/: trtp.h  trtp_manager.h  (+1 more)
touchtech_engine/tinyRTP/jni/: Android.mk
touchtech_engine/tinySAK/src/: tinysak_config.h  tsk.c  tsk_hmac.h  tsk_list.c  tsk_list.h  tsk_log.h  tsk_md5.c  tsk_options.c  tsk_params.h  tsk_ppfcs16.c  tsk_safeobj.h  tsk_sha1.h  tsk_thread.c  tsk_time.h  tsk_url.c  tsk_url.h  tsk_xml.c
touchtech_engine/tinySDP/include/: tinysdp.h
touchtech_engine/tinySDP/jni/: Android.mk
touchtech_engine/tinySDP/src/: tsdp.c  tsdp_message.c
touchtech_engine/xcode/SDKTest/: YouMeVoiceEngineImp.mm
(+7318 files in other folders)
